# wide

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker.just  justfile  proxy.toml  proxy.toml.example  start.sh
.cargo/: config.toml
.github/workflows/: build.yml  opencode.yml  release-plz.yml  release.yml
certs/: localhost.crt  localhost.key
src/: certificate.rs  config.rs  main.rs  proxy.rs
src/certificate/: mod.rs
src/view/: mod.rs
