[package]
name = "wide"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-proxy = { version = "0.6", features = ["http1", "http2"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
http-body-util = "0.1"
