[package]
name = "wide"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/rezi-labs/wide"
license-file = "LICENSE"
description = "A memory-efficient reverse proxy"

[dependencies]
axum = "0.8"
axum-reverse-proxy = "1.0.3"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
http-body-util = "0.1"
instant-acme = "0.7"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.1"
axum-server = { version = "0.7", features = ["tls-rustls"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rcgen = "0.12"
base64 = "0.22"
maud = { version = "0.27.0", features = ["axum", "axum-core"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
